<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline

        android:id="@+id/black_board_start_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />

    <androidx.constraintlayout.widget.Guideline

        android:id="@+id/black_board_end_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_newspaper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toStartOf="@+id/black_board_end_guide_line"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/black_board_start_guide_line"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/news_paper_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/accessibility_news_paper_icon"
                android:padding="3dp"
                android:tint="#ff7b00"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_black_board_newspaper" />

            <TextView
                android:id="@+id/news_paper_titile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/black_board_newspaper_title"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/news_paper_icon"
                app:layout_constraintTop_toTopOf="@+id/news_paper_icon" />

            <TextView
                android:id="@+id/news_paper_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/black_board_newspaper_description"
                android:textColor="#666666"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/news_paper_titile"
                app:layout_constraintTop_toBottomOf="@+id/news_paper_titile" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_canteen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toStartOf="@+id/black_board_end_guide_line"
        app:layout_constraintStart_toStartOf="@+id/black_board_start_guide_line"
        app:layout_constraintTop_toBottomOf="@+id/card_newspaper">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/canteen_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/accessibility_canteen_icon"
                android:padding="3dp"
                android:tint="#c10000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_black_board_mensa" />

            <ImageView
                android:id="@+id/pdf_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/accessibility_pdf_icon"
                android:padding="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/pdf_description"
                app:srcCompat="@drawable/ic_black_board_pdf_viewer" />

            <TextView
                android:id="@+id/canteen_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/black_board_mensa_title"
                android:textColor="#000000"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/canteen_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/canteen_icon"
                app:layout_constraintTop_toTopOf="@+id/canteen_icon"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/canteen_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/black_board_mensa_description"
                android:textColor="#666666"
                app:layout_constraintBottom_toTopOf="@+id/pdf_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/canteen_title"
                app:layout_constraintTop_toBottomOf="@+id/canteen_title" />

            <TextView
                android:id="@+id/pdf_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/black_board_pdf_description"
                android:textColor="#666666"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/canteen_title"
                app:layout_constraintTop_toBottomOf="@+id/canteen_description" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toStartOf="@+id/black_board_end_guide_line"
        app:layout_constraintStart_toStartOf="@+id/black_board_start_guide_line"
        app:layout_constraintTop_toBottomOf="@+id/card_canteen">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/contact_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:contentDescription="@string/accessibility_contact_icon"
                android:padding="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_black_board_send" />

            <TextView
                android:id="@+id/contact_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/black_board_contact_description"
                android:textColor="#424242"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/contact_icon"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>